--- a/_css/play_station.css
+++ b/_css/play_station.css
@@ -2,3 +2,10 @@
     height: 40px;
     width: 40px;
 }
+.botao{
+    color: white;
+    cursor: pointer;
+    background-color: black;
+    border: 1px solid black;
+    border-radius: 1.5rem;
+}
