--- a/_css/play_station.css
+++ b/_css/play_station.css
@@ -20,3 +20,14 @@
     margin: 10px;
     margin-left: 20px;
 }
+
+.botao-carrossel {
+    display: flex;
+    justify-content: center;
+}
+
+.botao-carrossel > div > img {
+    width: 30vh;
+    margin: 15px;
+    border-radius: 10px;
+}
