--- a/_css/play_station.css
+++ b/_css/play_station.css
@@ -31,3 +31,16 @@
     margin: 15px;
     border-radius: 10px;
 }
+
+.texto {
+   margin-left: 20%;
+   display:block;
+   margin-top: -200px;
+   position: absolute;
+   width: 30%;
+}
+
+.texto p{
+    color: #fff;
+    font-size: 20px;
+}
