--- a/_css/style.css
+++ b/_css/style.css
@@ -1,4 +1,4 @@
-
+ 
 a {
     color: hsl(210, 11%, 15%)!important;
 }
@@ -22,6 +22,11 @@ a {
 .menu {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    z-index: 999;
+
+    background-color: white;
+
 }
 
 .navs {
@@ -68,4 +73,3 @@ a {
 a:hover {
     color:hsl(208, 83%, 46%) !important;
 }
-
