--- a/_css/style.css
+++ b/_css/style.css
@@ -45,7 +45,6 @@ a {
     height: 6vh;
     margin-right: 15px;
 }
-
 .produtos {
     display: flex;
     flex-direction: row;
@@ -68,4 +67,8 @@ a {
 a:hover {
     color:hsl(208, 83%, 46%) !important;
 }
+ul{
+    list-style: none;
+}
+
 
